# simple_gomoku

./: .gitignore  CMakeLists.txt  Pipfile  lib.cpp  main.cpp  mymodule.cpp
.types/gomoku_engine-stubs/: __init__.pyi  setup.py
src/engine/: CMakeLists.txt  board.hpp  error.cpp  error.hpp  ex.cpp  gomoku.cpp  gomoku.hpp  lib.cpp  stone.hpp  validator.cpp  validator.hpp
src/ui/: gomoku.py
